<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.access_code.AccessCodeFragment">


    <ImageView
        android:id="@+id/fragment_central_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/donotwatch"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/donotwatch" />

    <TextView
        android:id="@+id/ton_wallet_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/access_code_title"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/fragment_central_image"
        />

    <TextView
        android:id="@+id/ton_wallet_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/access_code_enter_invitation"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/ton_wallet_title" />

    <ProgressBar
        android:id="@+id/access_code_progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ton_wallet_description"
        android:padding="10dip"
        />


    <TextView
        android:id="@+id/access_code_options_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/access_code_options"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/access_code_progress_bar" />


    <Button
        app:layout_constraintTop_toBottomOf="@id/access_code_options_text"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/access_code_button_1"
        android:text="@string/access_code_number_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <Button
        app:layout_constraintTop_toBottomOf="@id/access_code_options_text"
        android:id="@+id/access_code_button_2"
        android:text="@string/access_code_number_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="@id/access_code_button_3"
        app:layout_constraintLeft_toRightOf="@id/access_code_button_1"
        />
    <Button
        app:layout_constraintTop_toBottomOf="@id/access_code_options_text"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/access_code_button_3"
        android:text="@string/access_code_number_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <Button
        app:layout_constraintTop_toBottomOf="@id/access_code_button_1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/access_code_button_4"
        android:text="@string/access_code_number_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <Button
        app:layout_constraintTop_toBottomOf="@id/access_code_button_1"
        android:id="@+id/access_code_button_5"
        android:text="@string/access_code_number_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="@id/access_code_button_3"
        app:layout_constraintLeft_toRightOf="@id/access_code_button_1"
        />
    <Button
        app:layout_constraintTop_toBottomOf="@id/access_code_button_1"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/access_code_button_6"
        android:text="@string/access_code_number_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <Button
        app:layout_constraintTop_toBottomOf="@id/access_code_button_4"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/access_code_button_7"
        android:text="@string/access_code_number_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <Button
        app:layout_constraintTop_toBottomOf="@id/access_code_button_4"
        android:id="@+id/access_code_button_8"
        android:text="@string/access_code_number_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="@id/access_code_button_3"
        app:layout_constraintLeft_toRightOf="@id/access_code_button_1"
        />
    <Button
        app:layout_constraintTop_toBottomOf="@id/access_code_button_4"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/access_code_button_9"
        android:text="@string/access_code_number_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />


    <Button
        app:layout_constraintTop_toBottomOf="@id/access_code_button_7"
        android:id="@+id/access_code_button_0"
        android:text="@string/access_code_number_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="@id/access_code_button_3"
        app:layout_constraintLeft_toRightOf="@id/access_code_button_1"
        />
    <Button
        app:layout_constraintTop_toBottomOf="@id/access_code_button_7"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/access_code_button_delete"
        android:text="@string/access_code_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />




</androidx.constraintlayout.widget.ConstraintLayout>